# mgr-ws

./: .gitignore  README.md  concatenate_compile_commands.py
patrol_src_source/patrol_strategy/: CMakeLists.txt  package.xml
patrol_src_source/patrol_strategy/scripts/: dummy_strategy.py
patrol_src_source/rcprg_smach/nodes/: patrol_tasker
patrol_src_source/rcprg_smach/src/rcprg_smach/: patrol.py
src/: compile_commands.json
src/bringup/: package.xml
src/dialogflow/: .gitignore  CMakeLists.txt  dialogflow-secret.json  package.xml  requirements.txt
src/dialogflow/data/: context.json  files.txt  labels.txt
src/dialogflow/data/container/: data.txt
src/dialogflow/html/: chat.html
src/dialogflow/launch/: websocket.launch
src/dialogflow/nodes/: asker.py  human_time.py  talker.py  vad.py
src/dialogflow/secret_keys/: dialogflow-secret-private.json  dialogflow-secret.json  dialogflow-sikor-import-test-495ac82c4fca.json  dialogflow-sikor-import-test-7d74eb343ebe.json  text-to-speech-qtruau-baa78739e1d6.json
src/patrol_map_divider/: CMakeLists.txt  package.xml  setup.py
src/patrol_map_divider/config/: PatrolMapDivider.cfg
src/patrol_map_divider/scripts/: patrol_map_divider_node.py
src/patrol_map_divider/scripts/patrol_map_divider_pkg/: PatrolMapDivider.py  PatrolMapDividerROS.py  main.py
src/patrol_map_divider/scripts/patrol_map_divider_ros/: PatrolMapDivider.py  PatrolMapDividerROS.py  main.py
src/patrol_map_divider/scripts/patrol_map_divider_ros/utils/: MapSection.py  MapSectionPoint.py  TaskPoint.py
src/patrol_map_msgs/: CMakeLists.txt  package.xml
src/patrol_map_msgs/msg/: TaskPointMsg.msg
src/patrol_map_msgs/srv/: GetNextLocation.srv  SectionTasks.srv
src/tiago_commands/: CMakeLists.txt  package.xml
src/tiago_commands/scripts/: arm_home  head_lookaround
src/tiago_move_interface/: CMakeLists.txt  package.xml  setup.py
src/tiago_move_interface/config/motions/: tiago_motions.yaml
src/tiago_move_interface/scripts/tiago_move_interface/: TiagoInterface.py
src/tiago_startup/: CMakeLists.txt  package.xml
src/tiago_startup/launch/: bringup_dialogflow.launch  bringup_task_person_detect.launch  bringup_tiago_manipulation.launch
src/tiago_task_find_human/: CMakeLists.txt  package.xml  setup.py
src/tiago_task_find_human/nodes/: tiago_task_find_human_node
src/tiago_task_find_human/scripts/tiago_task_find_human/: find_human_server.py
src/tiago_test/: CMakeLists.txt  package.xml
