<?xml version="1.0"?>
<package format="2">
  <name>patrol_map_divider</name>
  <version>0.1.0</version>
  <description>The patrol_map_divider package</description>

  <maintainer email="mj.skrzypkowski@gmail.com">mskrzypk</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

    <depend>rospy</depend>
    <depend>map_server</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>patrol_map_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
